fixed text alignment

--- a/src/components/IconList/IconList.module.css
+++ b/src/components/IconList/IconList.module.css
@@ -67,5 +67,9 @@
       width: 100%;
       padding: 0 1rem;
     }
+
+    .title {
+      text-align: center;
+    }
   }
   
